--- a/data/DSB2018.yaml
+++ b/data/DSB2018.yaml
@@ -1,4 +1,4 @@
-path: /ASF-YOLO/datasets/DSB2018
+path: ./datasets/DSB2018
 train: # train images (relative to 'path')  536 images
   - images/train
 val: # val images (relative to 'path')  134 images
